update to specify nonparameteric and parameteric model space

--- a/paper/hillclimbing.tex
+++ b/paper/hillclimbing.tex
@@ -133,7 +133,7 @@ We are interested in finding the optimal model $f$ in some model class $F$ that 
 \min_{f \in F} L(\boldsymbol{y}, f(\boldsymbol{X})) + \sum\limits_{i=1}^J \lambda_i P_i(f)
 \label{optimizationproblem}
 \end{equation}
-where $L:\mathbb{R}^{2n} \rightarrow \mathbb{R}$ is the loss function, $P_i:\mathbb{R}^{m_i} \rightarrow \mathbb{R}$ is the $i$th penalty function, and $\lambda_i$ are the corresponding penalty parameters. Since the optimization problem in (\ref{optimizationproblem}) only requires fitted values at the points in the design matrix $\boldsymbol{X}$ and the penalty functions take in finite-dimensional inputs, the optimization problem reduces to optimizing over some finite-dimensional space $\Theta$. We can therefore rewrite the optimization problem in the following form instead:
+where $L:\mathbb{R}^{2n} \rightarrow \mathbb{R}$ is the loss function, $P_i:\mathbb{R}^{m_i} \rightarrow \mathbb{R}$ is the $i$th penalty function, and $\lambda_i$ are the corresponding penalty parameters. Since the optimization problem in (\ref{optimizationproblem}) only requires fitted values at the points in the design matrix $\boldsymbol{X}$ and the penalty functions take in finite-dimensional inputs, the optimization problem reduces to optimizing over some finite-dimensional space $\Theta$. If $F$ is the space of parametric models, then $\Theta$ would be the space of model parameters. If $F$ is the space of nonparametric models, then $\Theta$ is an $n+k$-dimensional space where the first $n$ dimensions are the fitted values for the points in the design matrix and the last $k$ dimensions are any additional parameters required for specifying the nonparametric model. We can therefore rewrite the optimization problem in the following form instead:
 
 \begin{equation}
 \min_{\theta \in \Theta} L(\boldsymbol{y}, f_\theta(\boldsymbol{X})) + \sum\limits_{i=1}^J \lambda_i P_i(\theta)
